# noc-oracle

./: .env.example  .gitignore  LICENSE  NOTABLE_CODE.md  README.md  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
data/manuals/: orbit_5g_guide.md
src/: app.py  engine.py  generators.py  ingestor.py
tests/: __init__.py  test_engine.py  test_generators.py  test_ingestor.py
